Route for Get User by ID
